# kube-sherlock

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  DEBUG.md  Dockerfile  README.md  docker-compose.debug.yaml  docker-compose.yaml  entrypoint.sh  flake.nix  justfile  main.py  pyproject.toml  system-prompt.txt
.github/workflows/: build-and-push.yaml
k8s/: resources.yaml
prompts/: conversational-rewrite.md  evaluation-context.md  evaluation.md  instructions.md  plan-creation.md  plan-refinement.md  plan-result.md  planner.md  planning-decision.md  reflection-instruction.md  reflection-system.md  reflection.md  reflection.txt  step-execution.md  supervisor.md  system.md  task-execution.md  worker.md
src/: agent.py  constants.py  discord.py  errors.py  healthcheck.py  llm.py  logger.py  mcp.py  planner.py  redis.py  settings.py  templates.py  utils.py
tests/: test_main.py
