[project]
name = "k8s-debug-agent"
version = "0.1.0"
description = "A Discord chatbot for debugging Kubernetes logs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.10.0",
  "discord-py>=2.6.0",
  "langchain-community>=0.3.27",
  "langchain-mcp-adapters>=0.1.9",
  "langchain[google-genai]>=0.3.27",
  "langgraph-checkpoint-redis>=0.1.1",
  "langgraph>=0.6.6",
  "langmem>=0.0.29",
  "opentelemetry-distro>=0.57b0",
  "opentelemetry-exporter-otlp>=1.36.0",
  "opentelemetry-instrumentation-aiohttp-server==0.57b0",
  "opentelemetry-instrumentation-asyncio==0.57b0",
  "opentelemetry-instrumentation-logging==0.57b0",
  "opentelemetry-instrumentation-redis==0.57b0",
  "opentelemetry-instrumentation-system-metrics>=0.57b0",
  "pydantic-settings>=2.10.1",
  "pydantic>=2.11.7",
  "uvloop>=0.21.0",
]

[dependency-groups]
debug = ["debugpy>=1.8.0"]
dev = [
  "deepeval>=3.4.0",
  "mypy>=1.17.1",
  "pytest>=8.0.0",
  "ruff>=0.12.9",
  "testcontainers>=4.12.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportAttributeAccessIssue = false
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]

[tool.ruff.format]
quote-style = "double"
